--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -57,7 +57,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    gap: 5px;
+    gap: 4px;
 }
 
 .nav-title {
@@ -113,7 +113,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    gap: 5px;
+    gap: 4px;
 }
 
 /* PROFILE AVATAR BUTTON */
@@ -266,7 +266,7 @@ body.dark .theme-icon-moon {
 
 .options-menu {
     position: absolute;
-    top: 50px;
+    top: 48px;
     right: 0;
 
     width: 180px;
@@ -292,7 +292,7 @@ body.dark .theme-icon-moon {
 
 .options-menu a {
     display: block;
-    padding: 12px 15px;
+    padding: 12px 16px;
     font-size: 14px;
     color: var(--text);
     transition: background 0.2s;
